# les_mentats-luxdev-hackaton-ia-2025

./: .gitignore  INTEGRATION_API.md  conversion_crs_to_4326.py  index.html  package-lock.json  package.json  start-api.sh  test-integration.md
api/: .gitignore  README.md  data_loader.py  generate_submission.py  main.py  pipeline.py  pyproject.toml  requirements.txt  schemas.py  test_enregistrement.py
api/api_env/: pyvenv.cfg
api/data/: submission_les_mentats.csv
api/notebooks/: carte.ipynb  untitled.ipynb
api/scripts/: data_loader.py  generate_submission.py  pipeline.py
api/services/: analyse_empietement.py  analyse_empietement.txt  analyse_empietement_optimized.py  chatbot.py  conversion_json_with_geojson.py  ocr.py
api/services/chat/: chatbot.py
api/utils/: logs.py
public/: index.html
src/: App.jsx  analyse_geojson_finale.json  index.css  polygone_parcelle.js
src/components/: AnalysisResults.jsx  Chatbot.jsx  ChatbotButton.jsx  Contact.jsx  CoordinateAnalyzer.jsx  Demande.jsx  DemandeSimple.jsx  Footer.jsx  Header.jsx  Hero.jsx  ImageAnalyzer.jsx  Partenaire.jsx  Services.jsx
src/components/dashboard/: Charts.jsx  DashboardHeader.jsx  RecentRequests.jsx  Sidebar.jsx  StatsCards.jsx
src/layouts/: MainLayout.jsx
src/pages/: Cadastre.jsx  CarteTopographie.jsx  Chatbots.jsx  Contact.jsx  Dashboard.jsx  Demande.jsx  Home.jsx  Partenaire.jsx  Topographie.jsx
src/services/: apiService.js  geojsonService.js
