[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.6.0",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "google-genai>=1.38.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "matplotlib>=3.10.6",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.32.1",
]
